# one-time-password

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  fourmolu.yaml  one-time-password.cabal
.github/: mergify.yml
.github/workflows/: linting.yml  nix.yml  one-time-password.yml
app/: Main.hs
src/: OTP.hs
src/OTP/: Commons.hs  HOTP.hs  TOTP.hs
test/: Test.hs
test/Test/: Comparison.hs  HOTP.hs  Properties.hs  TOTP.hs  Utils.hs
