cabal-version:      3.0
name:               one-time-password
version:            3.0.0.0
synopsis:           HMAC-Based and Time-Based One-Time Passwords
description:
  Implements HMAC-Based One-Time Password Algorithm as
  defined in RFC 4226 and Time-Based One-Time Password
  Algorithm as defined in RFC 6238.

license:            MIT
license-file:       LICENSE
copyright:          (c) 2012 Artem Leshchev, 2016 Aleksey Uimanov
author:             Artem Leshchev, Aleksey Uimanov
maintainer:         The Haskell Cryptography contributors
homepage:           https://github.com/haskell-cryptography/one-time-password
bug-reports:
  https://github.com/haskell-cryptography/one-time-password/issues

category:           Cryptography
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:        GHC ==9.4.8 || ==9.6.3

source-repository head
  type:     git
  location: git://github.com/haskell-cryptography/one-time-password.git

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
    -Wunused-packages

  default-language: GHC2021

library
  import:          ghc-options
  hs-source-dirs:  src

  -- cabal-fmt: expand src/
  exposed-modules:
    OTP.Commons
    OTP.HOTP
    OTP.TOTP

  build-depends:
    , base             >=4.16  && <5
    , bytestring       ^>=0.11
    , cereal           ^>=0.5
    , chronos          ^>=1.1
    , cryptohash-sha1  ^>=0.11
    , network-uri      ^>=2.6
    , sel
    , text             ^>=2.0
    , text-display     ^>=0.0
    , torsor           ^>=0.1

  ghc-options:     -Wall

test-suite tests
  import:             ghc-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-extensions: OverloadedStrings
  main-is:            Test.hs
  other-modules:
    Test.HOTP
    Test.TOTP
    Test.Utils

  build-depends:
    , base               >=4.16 && <5
    , base32             ^>=0.4
    , chronos
    , one-time-password
    , sel
    , tasty
    , tasty-hunit
    , text
    , text-display
    , torsor
